# PasswordRandom

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: biometric.rs  commands.rs  crypto.rs  db.rs  generator.rs  lib.rs  main.rs
src/components/: CategoryManager.vue  GeneratorPanel.vue  MasterLock.vue  PasswordHistory.vue  Settings.vue  TemplateEditor.vue
src/stores/: auth.ts  history.ts  template.ts
src/types/: index.ts
