[package]
name = "password-random"
version = "0.1.0"
edition = "2021"

[lib]
name = "password_random_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
regex = "1"

[profile.release]
opt-level = "s"
lto = true
strip = "symbols"
panic = "abort"
